Workbench audit fixes (#241)
* added some fixes

* Re-arrange columns of search localisations and removed border on the right of last column

* changes in add localization flow

-> By default after success we'll show an empty row
-> Added delete row functionality
-> changed layout of screen(pushed table and add clear table options to separate card)

* Update LocalisationAdd.js

* updated css version

* updated css

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/scroll-table.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/scroll-table.scss
@@ -112,3 +112,8 @@ color: #B1B4B6;
     flex-grow: 0;
     margin: 0px 0px;
 }
+
+.icon-wrapper {
+    margin-left:1rem;
+    cursor:pointer
+}
